# sentrux

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.de.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  TODO_UI_REFACTOR.md  install.sh
.claude-plugin/: marketplace.json
sentrux-bin/: Cargo.toml
sentrux-bin/src/: lib.rs  main.rs  main_impl.rs
sentrux-bin/src/main_impl/: cli.rs  commands.rs  gui.rs  output.rs  plugin.rs
sentrux-core/: Cargo.toml  build.rs
sentrux-core/src/: lib.rs  license.rs  string_enum.rs  test_support.rs
sentrux-core/src/analysis/: entry_points.rs  git.rs  guardrail_tests.rs  inferred_rules.rs  lang_registry.rs  mod.rs  project_shape.rs  test_helpers.rs
sentrux-core/src/analysis/concepts/: mod.rs
sentrux-core/src/analysis/graph/: mod.rs  tests.rs  tests2.rs
sentrux-core/src/analysis/parser/: ast_import_test.rs  ast_import_walker.rs  call_distribution.rs  captures.rs  imports.rs  lang_extractors.rs  mod.rs  same_file_refs.rs  strings.rs  tests.rs  tests2.rs
sentrux-core/src/analysis/plugin/: embedded.rs  loader.rs  manifest.rs  mod.rs  profile.rs
sentrux-core/src/analysis/project_shape/: boundaries.rs  detect.rs  render.rs  tests.rs
sentrux-core/src/analysis/resolver/: helpers.rs  mod.rs  oxc.rs  suffix.rs  suffix_aliases.rs  suffix_index_builder.rs  suffix_project_map.rs
sentrux-core/src/app/: breadcrumb.rs  canvas.rs  channels.rs  draw_panels.rs  mod.rs  prefs.rs  progress.rs  scan_threads.rs  scanning.rs  scanning_tests.rs  settings_panel.rs  state.rs  status_bar.rs  toolbar.rs  update_check.rs  update_loop.rs  watcher.rs
sentrux-core/src/core/: heat.rs  mod.rs  path_utils.rs  settings.rs  snapshot.rs  types.rs
sentrux-core/src/layout/: aggregation.rs  blueprint.rs  blueprint_dag.rs  mod.rs  routing.rs  spatial_index.rs  squarify.rs  test_helpers.rs  tests.rs  tests2.rs  treemap_layout.rs  types.rs  viewport.rs  weight.rs
sentrux-core/src/metrics/: cross_validation.rs  file_analysis.rs  grading.rs  graph_analysis.rs  mod.rs  mod_tests.rs  mod_tests2.rs  root_causes.rs  stability.rs  temporal.rs  test_helpers.rs  types.rs  whatif_root_causes.rs
sentrux-core/src/renderer/: badges.rs  colors.rs  edge_routing.rs  edges.rs  heat_overlay.rs  minimap.rs  mod.rs  rects.rs
sentrux-core/tests/: validate_queries.rs
(+679 files in other folders)
