[package]
name = "sentrux"
version = "0.2.0"
edition = "2021"
description = "Live codebase visualization and structural quality gate for AI-agent-written code"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://github.com/sentrux/sentrux"

[[bin]]
name = "sentrux"
path = "src/main.rs"

[dependencies]
sentrux-core = { path = "../sentrux-core" }
private-integration-crate = { path = "../../private-integration-crate", optional = true }
eframe = { workspace = true }
egui = { workspace = true }

[features]
default = []
pro = ["sentrux-core/pro", "dep:private-integration-crate"]  # Pro tools provided by separate private-integration-crate crate
