[package]
name = "sentrux-core"
version = "0.3.3"
edition = "2021"
description = "Core library for sentrux — structural quality analysis engine"
license = "MIT"
repository = "https://github.com/sentrux/sentrux"
homepage = "https://github.com/sentrux/sentrux"
keywords = ["code-quality", "architecture", "visualization", "mcp", "treemap"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = { workspace = true }
serde_json = "1"
egui = { workspace = true }
rfd = "0.15"
crossbeam-channel = "0.5"
rayon = "1"
ignore = "0.4"
tokei = "12"
dashmap = "6"
notify = "7"
notify-debouncer-mini = "0.5"
git2 = "0.20"
tree-sitter = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
regex = "1"
streaming-iterator = "0.1.9"
oxc_resolver = "11"
libloading = "0.8"
dirs = "6"

[features]
default = []
pro = []  # Activated by private-integration-crate crate via sentrux-bin
